--- a/style.css
+++ b/style.css
@@ -33,7 +33,7 @@
 .task-name {
   width: 56%;
   display: inline-block;
-  flex-grow: 1
+  flex-grow: 1;
 }
 .wrapper {
   display: flex;
@@ -120,7 +120,7 @@ input, .btn{
   width: 226px;
 }
 .task-item >    .task-input {
-  width: 226px
+  width: 226px;
 }
 .remove-img {
   height: 2em;
@@ -133,18 +133,18 @@ input, .btn{
 
 /* Completed */
 #completed-tasks .task-name {
-  text-decoration: line-through
+  text-decoration: line-through;
   color: #888;
 }
 
 /* Edit Task */
 .task-item .task-input {
-  display: none
+  display: none;
 }
 
 .edit-mode .task-input {
   display: inline-block;
-  width: 224px
+  width: 224px;
 }
 
 .task-items .edit-mode .task-name {
